Reattempt porting 1.21.1